# automate_reports_gpt

./: README.md  consumer.py  docker-compose.yaml  producer.py  pyproject.toml  sample_queries.sql  schema.sql
